[gd_scene load_steps=13 format=3 uid="uid://b1fa7tquvp41d"]

[ext_resource type="Script" path="res://Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://tj0cqsix56tg" path="res://spritesheets/Witchcraft_spr_2.png" id="2"]
[ext_resource type="AudioStream" uid="uid://jfbs2e7t4nsj" path="res://audio/sfx/you_win.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://blgtsx07v0df6" path="res://audio/sfx/wall.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://ca21vdynr4j30" path="res://audio/sfx/space/step.wav" id="5"]

[sub_resource type="Animation" id="5"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="3"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="4"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlightSoundPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="1"]
resource_name = "run"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StepSoundPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2bdn"]
_data = {
"fall": SubResource("5"),
"idle": SubResource("3"),
"jump": SubResource("4"),
"run": SubResource("1")
}

[sub_resource type="CapsuleShape2D" id="2"]
radius = 2.60719
height = 5.21438

[sub_resource type="ParticleProcessMaterial" id="6"]
spread = 180.0
gravity = Vector3(0, 0, 0)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1")
move_speed = 60
jump_force = 300

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0.085, -8)
texture = ExtResource("2")
hframes = 21
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_w2bdn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.78862)
shape = SubResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2(1.5, 1.5)

[node name="JumpParticles" type="GPUParticles2D" parent="."]
position = Vector2(5.62699, -8.52576)
emitting = false
process_material = SubResource("6")

[node name="WinParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -9.23774)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
process_material = SubResource("6")

[node name="WinSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="FlightSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="StepSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -5.049
